--- a/app/public/assets/css/magister.css
+++ b/app/public/assets/css/magister.css
@@ -171,15 +171,6 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 }
 
 
-
-@media (max-width: 767px) {
-	.lead { 
-		font-size:1.3em;
-	}
-}
-
-
-
 /********************************************************/
 /*                   UI - Buttons                       */
 /********************************************************/
@@ -482,6 +473,13 @@ h5 {
 	letter-spacing: .08em;
 }
 
+.surveyForm {
+	animation-duration: 10s;
+	-webkit-animation-duration: 10s;
+	-moz-animation-duration: 10s;
+	 animation-delay: .25s; 
+}
+
 /***********************************************************/
 /*                   My Media Queries                       */
 /***********************************************************/
@@ -527,13 +525,11 @@ h5 {
 		line-height: 1.5em;
 	}
 
-
 	.newFriendName{
 		font-family: "Wire One";
     font-size: 2.5em;
     letter-spacing: .08em;
 	}
-
 }
 	
 
@@ -607,5 +603,9 @@ h5 {
 		font-family: "Wire One";
 		font-size: 1.5em;
 		letter-spacing: .01em;
+	}
+
+	.lead { 
+		font-size:1.3em;
 	}
 }
