--- a/app/public/assets/css/magister.css
+++ b/app/public/assets/css/magister.css
@@ -1,3 +1,7 @@
+/* * {
+   border: 1px solid red !important;
+} */
+
 html {
 	background:#505D6E url(../images/body4.jpg) no-repeat center center fixed; 
 	min-height:100%;
