Cleaning, updated README

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>FriendFinder</title>
+    <!-- Wire One Font -->
     <link href='https://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
      <!-- Font Awesome CDN-->
   <script src="https://use.fontawesome.com/c38831e163.js"></script>
