--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,24 @@
 <!doctype html>
 <html>
-  <head>
-    <title>FriendFinder</title>
-    <!-- Wire One Font -->
-    <link href='https://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
-     <!-- Font Awesome CDN-->
+
+<head>
+  <title>FriendFinder</title>
+  <!-- Wire One Font -->
+  <link href='https://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
+  <!-- Font Awesome CDN-->
   <script src="https://use.fontawesome.com/c38831e163.js"></script>
-    <style>
-      *{
-        font-family: 'Wire One';
-      }
-    </style>
-  </head>
-  <body style="background: black; text-align: center;">
-      <a href="/"><i class="fa fa-home fa-inverse text-center"></i></a>
-      {{{ body }}}
-  </body>
+  <style>
+    * {
+      font-family: 'Wire One';
+    }
+  </style>
+</head>
+
+<body style="background: black; text-align: center;">
+  <a href="/">
+    <i class="fa fa-home fa-inverse text-center"></i>
+  </a>
+  {{{ body }}}
+</body>
+
 </html>
